--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -5,9 +5,9 @@
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
           <li class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item"><a href="#about-me">Homepage</a></li>
-           for link in site.data.navigation.main 
+           {%for link in site.data.navigation.main%} 
             <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
-           endfor 
+           {%endfor%} 
         </ul>
         <ul class="hidden-links hidden"></ul>
       </nav>
