--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: compress
 <!doctype html>
 <html lang="en" class="no-js">
   <head>
-    {% include head.html %}
+    include head.html
     {% include head/custom.html %}
   </head>
 
