--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -5,6 +5,7 @@
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
           <li class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item"><a href="#about-me">Homepage</a></li>
+          <li class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item"><a href="#-publications">Publications</a></li>
            {%for link in site.data.navigation.main%} 
             <li class="masthead__menu-item"><a href="szy.github.io/{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
            {%endfor%} 
