--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -6,13 +6,13 @@
         <ul class="visible-links">
           <li class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item"><a href="#about-me">Homepage</a></li>
             <li class="masthead__menu-item"><a href="#-about-me">About Me</a></li>
-             <li class="masthead__menu-item"><a href="#-works">Works</a></li>
+             <li class="masthead__menu-item"><a href="#-projects">Projects</a></li>
               <li class="masthead__menu-item"><a href="#-publications">Publications</a></li>
                <li class="masthead__menu-item"><a href="#-honors-and-awards">Honors and Awards</a></li>
                 <li class="masthead__menu-item"><a href="#-educations">Educations</a></li>
                   <li class="masthead__menu-item"><a href="#-internships">Internships</a></li>
            {%for link in site.data.navigation.main%} 
-            <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
+            {%<li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>%}
            {%endfor%} 
         </ul>
         <ul class="hidden-links hidden"></ul>
